# delta-sorter

./: .gitignore  Cargo.toml  Makefile  README.md
crates/sorter-cli/: Cargo.toml
crates/sorter-cli/src/: main.rs
crates/sorter-core/: Cargo.toml
crates/sorter-core/src/: lib.rs
crates/sorter-core/tests/: smoke.rs
crates/sorter-py/: Cargo.toml  pyproject.toml
crates/sorter-py/src/: lib.rs
examples/: quickstart.md
examples/python/: partitioned_quickstart.py  predicate_typing.py  quickstart.py  validate_only.py
python/: Cargo.toml  pyproject.toml
python/deltasort/: __init__.py
python/pysrc/deltasort/: __init__.py
python/src/: lib.rs
python/tests/: conftest.py  test_null_sorting.py  test_predicate_typing.py  test_sorting.py  test_validate_and_compact.py
