[workspace]
members = [
    "crates/sorter-core",
    "crates/sorter-cli",
]
resolver = "2"
exclude = ["crates/sorter-py"]

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
