[package]
name = "sorter-py"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "deltasort"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
once_cell = "1"
sorter-core = { path = "../crates/sorter-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
