[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "deltasort"
version = "0.1.0"
description = "Delta Lake compaction + global sort (Rust, PyO3)"
readme = "../README.md"
requires-python = ">=3.8"
authors = [{ name = "Codex Team" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.maturin]
bindings = "pyo3"
module-name = "deltasort"
python-source = "pysrc"
# manylinux = "2_35"  # uncomment to pin manylinux tag if needed
