[package]
name = "sorter-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# External crates (kept minimal for initial scaffolding)
# Use core crate to access transaction APIs
deltalake = { version = "0.22", default-features = false, features = ["s3", "azure", "gcs", "datafusion"] }
object_store = "0.12"
futures = "0.3"
datafusion = "43"
deltalake-core = "0.22"
num-traits = "0.2"
